# mdanki

./: .gitignore  anki.html  index.html  package.json  styles.css  todo.md  vite.config.js
data/E7A/: Unit1.md  Unit5.md  Unit6.md  Unit7.md  Unit8.md
data/E7B/: Unit2.md  Unit3.md  Unit7.md
data/E8A/: Unit3.md  Unit4.md  Unit5.md
data/cloze/: 物理-必修1-内容.md
data/json/: EW10A.json  EW10B.json  EW10C.json  EW11A.json  EW11B.json  EW7A.json  EW7B.json  EW8A.json
data/md/: E10B-U1.md  E10B-U2.md  E10B-U3.md  E10B-U4.md  E10C-U1.md  E10C-U2.md  E10C-U3.md  E10C-U4.md  E11A-U1.md  E11A-U2.md  E11A-U3.md  E11A-U4.md  E7A-U2.md  E7A-U3.md  E7A-U4.md  E7B-U1.md  E7B-U4.md  E7B-U5.md  E7B-U6.md  E7B-U8.md  E8A-U1.md  E8A-U2.md  E8A-U6.md  E8A-U7.md  E8A-U8.md  EW10A-U1.md  EW10A-U2.md  EW10A-U3.md  EW10A-U4.md  EW10A_U1.md  EW10A_U2.md  EW10A_U3.md  EW10A_U4.md  EW10B-U1.md  EW10B-U2.md  EW10B-U3.md  EW10B-U4.md  EW10C-U1.md  EW10C-U2.md  EW10C-U3.md  (+49 more)
doc/: ai-cli-prompt.md
helper/: Cargo.toml  packager.py
src/: config.js  db.js  dom.js  index.html  main.js  state.js  styles.css  utils.js
tookit/aicli/: Cargo.toml
tookit/aicli/data/: chat_main.db  config.yaml
tookit/aicli/data/client/: index.json
tookit/aicli/migrations/: 20231101000000_initial_schema.sql
tookit/aicli/src/: error.rs  main.rs
tookit/aicli/src/client/: actions.rs  cli.rs  local_store.rs  mod.rs  network.rs
tookit/aicli/src/client/tui/: action.rs  app.rs  log_widget.rs  mod.rs  ui.rs
tookit/aicli/src/common/: config.rs  crypto.rs  frame.rs  mod.rs  protocol.rs  types.rs
tookit/aicli/src/server/: db.rs  handler.rs  init.rs  listener.rs  mod.rs  user_mgnt.rs  worker.rs
tookit/aicli/src/server/ai_gateway/: mod.rs  openai.rs
tookit/anki_helper/: .env.example  Cargo.toml  README.md  config.toml.example
tookit/anki_helper/src/: cli.rs  main.rs
tookit/anki_helper/src/modules/: md.rs  pack.rs  pkg2md.rs
tookit/anki_helper/template/: ankimodel.json
(+164 files in other folders)
