[package]
name = "ai-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.19" # 添加这一行

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json"] } # Using 0.12 for latest features
async-trait = "0.1"
serde_json = "1.0" # For AI API communication
log = "0.4" # For logging
env_logger = "0.11" # Simple logger implementation
clap = { version = "4.4", features = ["derive"] } # For CLI parsing

ratatui = "0.24.0" 
ratatui-textarea = "0.4.1"

crossterm = "0.27" # Backend for terminal manipulation
tokio-util = "0.7" # Useful for TUI event handling
rcgen = "0.13"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
# FIX: Enable the "check" feature for bs58 to use versioned/checksummed encoding and decoding.
bs58 = { version = "0.5", features = ["check"] }